search overflow fix

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -105,6 +105,7 @@
 }
 
 .search-input {
+  width: 0px;
   flex-grow: 1;
   background: rgba(0, 0, 0, 0.5); /* สีเข้มกว่าพื้นหลัง */
   border: none; /* ไม่มีกรอบ */
